# YOKAI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: Linux.yml  Windows.yml  cppcheck.yml  macOS.yml  main.yml
content/Shaders/: debugVertex.vert  ds.vert  fs.frag
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glew/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Components/: AutomatedBehaviours.cpp  AutomatedBehaviours.hpp  BoxCollider.cpp  BoxCollider.hpp  Camera.cpp  Camera.hpp  Component.hpp  ConcaveCollider.cpp  ConcaveCollider.hpp  DrawableEntity.cpp  DrawableEntity.hpp  InputComponent.cpp  InputComponent.hpp  PhysicsObject.hpp  RayCaster.cpp  RayCaster.hpp  SphereCollider.cpp  SphereCollider.hpp  Transform.cpp  Transform.hpp
src/Controller/: EventManager.cpp  Export.hpp  GameObjectManager.cpp  GameObjectManager.hpp  InputComponent.cpp  InputComponent.hpp  InputManagerGLFW.cpp  InputManagerGLFW.hpp  KeyframeAnimation.cpp  KeyframeAnimation.hpp  Layer.hpp  ModelManager.cpp  ModelManager.hpp  TerrainManager.cpp  UIManager.cpp  UIManager.hpp  Yokai.cpp  Yokai.hpp  exampletest_test.cpp
src/Controller/Factory/: TerrainFactory.cpp
src/Controller/Physics/: PhysicsSystem.cpp  PhysicsSystem.hpp  RigidBody.cpp  RigidBody.hpp
src/Controller/Physics/Shapes/: ReactConcaveShape.cpp  ReactConcaveShape.hpp  ReactTerrainShape.cpp  ReactTerrainShape.hpp
src/Engine/: EventManager.hpp  GameObject.cpp  GameObject.hpp  GameObjectManager.cpp  GameObjectManager.hpp  InputManagerGLFW.cpp  InputManagerGLFW.hpp  JSONHelper.cpp  JSONHelper.hpp  JSONTypes.hpp  LightManager.cpp  LightManager.hpp  ModelManager.cpp  ModelManager.hpp  Scene.cpp  Scene.hpp  TextureManager.cpp  TextureManager.hpp  UIManager.cpp  UIManager.hpp  Yokai.cpp  Yokai.hpp
src/Graphics/: CMakeLists.txt
src/Graphics/Model/: Animator.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp  SkeletalAnimation.cpp
src/Graphics/Model/ObjectLoading/: CalcTangent.cpp  CalcTangent.hpp  ModelLoader.cpp  ModelLoader.hpp  mikktspace.c
src/Graphics/Renderer/: DataTypes.cpp  DataTypes.hpp  DrawItem.hpp  GLFWWindow.cpp  GLFWWindow.hpp  LightManager.cpp  LightManager.hpp  LightingTypes.hpp  Mesh.cpp  Mesh.hpp  PointLight.cpp  PointLight.hpp  RenderAPI.cpp  RenderAPI.hpp  Renderer.cpp  Renderer.hpp  Samplers.hpp  TextureManager.cpp  TextureManager.hpp  Window.cpp  Window.hpp  imgui_impl_glfw.h
src/Graphics/Renderer/bgfx/: CubeMapFilterer.cpp  CubeMapFilterer.hpp  LightBuffer.cpp  LightBuffer.hpp  LightProbe.cpp  LightProbe.hpp  bgfxDataTypes.cpp  bgfxDataTypes.hpp  bgfxRenderer.cpp  bgfxRenderer.hpp  bgfxShader.cpp  bgfxShader.hpp  bgfximgui.cpp  bgfximgui.hpp  bgfxutil.cpp  bgfxutil.hpp
src/Model/: Animator.cpp  Animator.hpp  Component.hpp  GameObject.cpp  GameObject.hpp  KeyframeAnimation.cpp  KeyframeAnimation.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  SkeletalAnimation.cpp  SkeletalAnimation.hpp  SplashScreen.cpp  SplashScreen.hpp
src/Model/Components/: BoxCollider.cpp  BoxCollider.hpp  Camera.cpp  Camera.hpp  ConcaveCollider.hpp  DrawableEntity.cpp  DrawableEntity.hpp  PlayerControlledMotion.cpp  PlayerControlledMotion.hpp  SphereCollider.cpp  SphereCollider.hpp  Transform.cpp  Transform.hpp
src/Model/ObjectLoading/: ModelLoader.cpp  ModelLoader.hpp
src/Physics/: CMakeLists.txt  CollisionBody.cpp  CollisionBody.hpp  Physics.hpp  PhysicsResolution.cpp  PhysicsResolution.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PhysicsUnits.hpp  ReactMath.cpp  ReactMath.hpp  ResolutionFunctions.cpp  ResolutionFunctions.hpp  RigidBody.cpp  RigidBody.hpp  debugFragment.frag
src/Physics/Shapes/: ReactBoxShape.cpp  ReactBoxShape.hpp  ReactConcaveShape.cpp  ReactConcaveShape.hpp  ReactShape.cpp  ReactShape.hpp  ReactSphereShape.cpp  ReactSphereShape.hpp  ReactTerrainShape.cpp  ReactTerrainShape.hpp
src/Renderer/: CMakeLists.txt  DataTypes.cpp  DataTypes.hpp  DrawItem.hpp  LightManager.cpp  LightManager.hpp  Mesh.cpp  Mesh.hpp  RenderAPI.cpp  RenderAPI.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
src/Renderer/OpenGL/: FileIO.cpp  FileIO.hpp  OpenGLDataTypes.cpp  OpenGLDataTypes.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp
src/Renderer/bgfx/: bgfxDataTypes.cpp  bgfxDataTypes.hpp  bgfxRenderer.cpp  bgfxRenderer.hpp  bgfxShader.cpp  bgfxShader.hpp  bgfximgui.hpp  bgfxutil.cpp  bgfxutil.hpp
src/Shaders/: common.sh  cs_MS_albedoLUT.sc  fs_iblShader.sc  fs_ocornut_imgui.sc  fs_pbrShader.sc  fs_shader.sc  lights.sh  pbr.sh  shaderlib.sh  util.sh  varying.def.sc  vs_pbrShader.sc  vs_pbrSkinned.sc  vs_shader.sc
src/Shaders/IBL/: cs_irradiance.sc  cs_prefilter_env_map.sc
src/Shaders/imgui/: fs_ocornut_imgui.sc  vs_ocornut_imgui.sc
src/Shaders/tonemap/: cs_avglum.sc  cs_histogram.sc  fs_tonemap.sc  vs_tonemap.sc
src/View/: Window.cpp
src/View/Renderer/: DataTypes.cpp  Shader.cpp  Shader.hpp
src/View/Renderer/OpenGL/: FileIO.cpp  OpenGLDataTypes.cpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp
src/core/: CMakeLists.txt  Camera.hpp  CmakeLists.txt  Time.hpp  Transform.hpp
src/core/Engine/: GameObject.hpp  GameObjectManager.hpp  InputManagerGLFW.cpp  JSONTypes.cpp  JSONTypes.hpp
src/core/Memory/: ConcurrentQueue.hpp
src/core/Resource/: AssetProxy.hpp  AssetStorage.hpp  Resource.cpp  Resource.hpp
tests/: CMakeLists.txt  main_tests.cpp
tests/core_tests/: init_test.cpp  transform_tests.cpp
tests/test_data/: serializetransform_test.json
